# Catia_AutoBlade

./: .gitignore  README.md  create_blade.py  pyproject.toml
input/section_params/: section_params-1.csv  section_params-2.csv  section_params-3.csv  section_params-4.csv  section_params-5.csv
src/: batch_create_blade.py  create_blade.py
src/catia_automation/: __init__.py
