[project]
name = "catia-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pycatia>=0.9.5",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
cablade = "catia_automation.create_blade:main"
catblade-batch = "catia_automation.batch_create_blade:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catia_automation"]
